smdb/smdb/static/css/map.css
html,
body {
  height: 100%;
  min-height: 100%;
  overflow: scroll;
  margin: 0;
  height: 100vh;
  font-family: "Roboto", sans-serif !important;
  color: #212529;
}

#map {
  top: 160px;
  position: relative;
  width: 100%;
  height: 85%;
  /* padding-top: 10%; */
  z-index: 500;
  /*margin-left: 250px; - Testing with new proSidebar*/
}

#mapNav {
  padding: 0px;
  margin: 0px;
  height: 80px;
  max-height: 80px;
  min-height: 80px;
}


/* #map {
} */
#map-bounds {
  padding: 0px;
  max-width: 100%;
  max-height: 100vh;
  margin: 0px;
  color: #00008b;
}

#mapControls {
  height: 80px;
  min-height: 80px;
  padding: 0px;
  margin: 0px;
  border: 2px solid darkgray;
}

#mapControlRow {
  width: 100%;
  height: 40px;
  padding: 0px;
}

#mapControlHeader {
  height: 100%;
  min-height: 100%;
  margin: 0px;
  padding-right: 0px;
  padding-left: 0px;
}


#coordinates {
  margin-top: 10px;
}

.slider {
  width: 100%;
  /* padding-bottom: 10%; */
}

.slider,
.leaflet-control {
  margin: 0%;
}

#leaflet-slider {
  color: darkgrey;
}

.sidebar {
  width: 250px;
}

.leaflet-control>.leaflet-sidebar-topleft {
  width: 250px !important;
}

